<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_area_coverage"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:title="@string/title_area_coverage" />
    <item
        android:id="@+id/navigation_for_corporate"
        android:icon="@drawable/ic_mode_edit_black_24dp"
        android:title="@string/title_for_corporate" />
    <item
        android:id="@+id/navigation_contact_us"
        android:icon="@drawable/ic_contact_mail_black_24dp"
        android:title="@string/title_contact_us" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />

</menu>
