<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@drawable/servbg">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarcredits"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#00283a"
        android:gravity="top"
        android:minHeight="50dp"
        app:theme="@style/ToolbarStyle"
        app:titleMarginTop="@dimen/margin_to_center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mansopresk"
            android:textColor="#fff"
            android:textSize="15dp"
            android:textStyle="bold"/></android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"

        android:gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="#000"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="Mehendi costs..."/>
    <RadioGroup
        android:id="@+id/mehcostrg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <RadioButton
            android:buttonTint="@color/your_color"
            android:id="@+id/bridetrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:textColor="#000"
            android:padding="20dp"
            android:text="@string/bride_costs_traditional"/>
        <RadioButton
            android:buttonTint="@color/your_color"
            android:id="@+id/bridethd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="20dp"
            android:textColor="#000"
            android:text="@string/bride_costs_theme"/>
        <RadioButton
            android:buttonTint="@color/your_color"
            android:id="@+id/gueststrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="20dp"
            android:textColor="#000"
            android:text="@string/guest_costs_traditional"/>
        <RadioButton
            android:buttonTint="@color/your_color"
            android:id="@+id/gueststhd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="20dp"
            android:textColor="#000"
            android:text="@string/guest_costs_theme"/>
        <RadioButton
            android:buttonTint="@color/your_color"
            android:id="@+id/bothtrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="20dp"
            android:textColor="#000"
            android:text="@string/bg_costs_traditional"/>
        <RadioButton
            android:buttonTint="@color/your_color"
            android:id="@+id/boththd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="20dp"
            android:textColor="#000"
            android:text="@string/bg_costs_theme"/>
    </RadioGroup>
    </LinearLayout>
    </ScrollView>
</LinearLayout>